@@ -4,6 +4,7 @@
 #include <vector>
 #include <string>
 #include <random> // For the fancy randomness like a normal distribution
+#include <noise.h>
 #include "Tile.hh"
 #include "MapHelpers.hh"
 #include "Map.hh"
@@ -16,11 +17,16 @@ class Mapgen {
     /* The seed that was used to generate the world. */
     int seed;
 
+    /* The map to generate. */
+    Map map;
+
     /* Generate a tiny world good for testing world generation. */
     void generateSmolTest();
 
-    /* The map to generate. */
-    Map map;
+    /* Get the value on a cylinder from a noise module. This squishes all x
+    values into the unit circle without affecting y values, so scale 
+    adjustments may be needed. */
+    double getCylinderValue(int x, int y, noise::model::Cylinder&) const;
 
 public:
     /* Take a reference to a newly created map, and fill it with stuff. */
