@@ -3,7 +3,7 @@
 
 /* Keep track of the version. */
 #define MAJOR 0
-#define MINOR 2
-#define PATCH 0
+#define MINOR 3
+#define PATCH 1
 
 #endif
